# Hallinta

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SECURITY.md  UPDATEHISTORY.md  build.rs
docs/: logging.md
src/: app.rs  index.html  log-window.html  main.js  main.rs  models.rs  phraseManager.js  presetManager.js  settingsManager.js  state.js  styles.css  tasks.rs  uiManager.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app.rs  backup.rs  files.rs  gallery.rs  lib.rs  logging.rs  main.rs  models.rs  save_monitor.rs  session.rs  settings.rs  workshop.rs
src/core/: backup.rs  file_watcher.rs  gallery.rs  logging.rs  mod.rs  mods.rs  platform.rs  presets.rs  save_monitor.rs  settings.rs  workshop.rs
src/css/: animations.css  base.css  components.css  gallery.css  header.css  layout.css  mod-list.css  presets.css  responsive.css  settings.css  sidebar.css  status-bar.css
src/js/: backupManager.js  catalogConfig.js  eventHandlers.js  galleryManager.js  logUtils.js  modManager.js  presetManager.js  reorderUtils.js  saveMonitorManager.js  selectEnhancer.js  settingsManager.js  state.js  uiManager.js
src/ui/: context_menu.rs  gallery.rs  header.rs  mod.rs  mod_list.rs  modals.rs  preset_bar.rs  settings.rs  sidebar.rs  theme.rs
