[package]
name = "hallinta"
version = "0.8.0"
description = "Hallinta - Noita Mod Manager"
authors = ["kungfulife"]
edition = "2024"

[dependencies]
eframe = "0.33.3"
egui_extras = { version = "0.33.3", features = ["image"] }
rfd = "0.17.2"
opener = "0.8.4"
image = { version = "0.25.9", default-features = false, features = ["png"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

dirs = "6.0.0"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "fs"] }
chrono = "0.4.44"
zip = "8.2.0"
named-lock = "0.4"
walkdir = "2.5.0"
reqwest = { version = "0.13.2", features = ["json"] }
sha2 = "0.10.9"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
