[package]
name = "hallinta"
version = "0.3.6"
description = "Hallinta - Noita Mod Manager"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hallinta_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
tauri = { version = "2.6.2", features = [] }
tauri-plugin-opener = "2.4.0"
tauri-plugin-dialog = "2.3.0"
tauri-plugin-shell = "2.3.0"
tauri-runtime-wry = "2.7.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dirs = "6.0.0"
tokio = "1.45.1"
chrono = "0.4.41"
zip = "4.2.0"
named-lock = "0.4.1"